# ManufacturingSystem

./: .coveragerc  .env.example  .gitignore  02_CLEANUP_DATABASE_FIXED.sql  03_ADD_MISSING_COLUMNS.sql  3D_RENDERING_SETUP.md  ANALIZA_POL_TABELI.md  ANALIZA_PROBLEMU_SUPABASE.md  Add-SendToGPT-ExternalTool.ps1  BINARY_DATA_FIX.md  BINARY_DATA_HANDLING.md  CHANGES_SUMMARY.md  CUSTOMER_MODULE_INTEGRATION.md  DATABASE_VALIDATION_CHECK.sql  DATABASE_VALIDATION_CHECK_FIXED.sql  DEBUG_BINARY_DATA.md  DOKUMENTACJA_UZYTKOWNIKA_NOWE_FUNKCJE.md  DOUBLE_ENCODING_FIX.md  FINAL_CHANGES_SUMMARY.md  FIX_DATABASE_STRUCTURE_V2.sql  FIX_PRODUCTS_CATALOG_RLS.sql  FIX_SUMMARY.md  FREECAD_SETUP.md  INSTRUKCJE_INTEGRACJI.md  INTEGRACJA_STORAGE_README.md  Integracja Supabase z Object Storage (S3-like) w Systemie Zarządzania Produkcją.md  LICENSE  MANIFEST.in  MIGRATE_TO_BLOB_STORAGE.sql  MIGRATE_TO_BLOB_STORAGE_SAFE.sql  ManufacturingSystem 2025.11.16 23_38.7z  ManufacturingSystem 2025.11.16 23_52.7z  ManufacturingSystem.pyproj  ManufacturingSystem.sln  NAPRAWA_SYSTEMU_2025-11-17.md  PODSUMOWANIE_IMPLEMENTACJI.md  PRODUCTS_CATALOG_UPDATE.md  PRODUCTS_MODULE_README.md  PRODUCTS_SELECTOR_README.md  PROJECT_CLEANUP_ANALYSIS.md  (+89 more)
.claude/: settings.local.json
2025.11.15_unused_files_backup/: CHECK_TABLE_STRUCTURE.sql  CLEAN_DATABASE.sql  DATABASE_TABLES_SUMMARY.md  FIND_AND_FIX_ALL_TRIGGERS.sql  INSTRUKCJA_NAPRAWY.md  JAK_DZIALA_GENEROWANIE_MINIATUR.md  PRODUCTS_MODULE_README.md  QUICK_START.md  SIMPLE_FIX.sql  attachments_gui_widgets.py  mfg_app.py  outlook_agent.py  part_edit_enhanced.py  products_module.py  products_selector_dialog.py  verify_thumbnail_display.py
archiv/: README.md  test_customer_enhanced.py
archiv/2025-11-11/: 01_ANALYZE_DATABASE_CORRECT.sql  04_OPTIMIZE_INDEXES.sql  05_FINAL_VERIFICATION.sql  06_FIX_PRODUCTS_CATALOG.sql  99_VACUUM_MANUAL.sql  VS_Keybinding_SendToGPT.vssettings  example_3d_integration.py  part_edit_enhanced_backup.py  part_edit_enhanced_v2.py  part_edit_enhanced_v3.py  reinstall_all.bat  render3d.py  test_3d_rendering.py  test_cad_auto.py  test_final_verification.py  test_freecad_direct.py  test_freecad_rendering.py  test_part_edit_changes.py  test_products_module.py  test_sample.dxf  test_step.py
backup_20251115_231624/: backup_summary.txt  customers.csv  customers.json  materials_dict.csv  materials_dict.json  migrate_to_mysql.py  mysql_schema.sql  orders.csv  orders.json  products_catalog.csv  products_catalog.json
mfgviewer/: README_MFGVIEWER.md  app.py  backend_vtk.py  dxf_preview.py  requirements_mfgviewer.txt  sheet_thickness.py
settings/: app_settings.json
tests/: __init__.py  test_models.py
tools/: GenCommit.ps1  ReviewPatch.ps1  SendToGPT.ps1
